# bsi

./: .gitignore  AUTHORS  Makefile  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
data/: gmon.out  logs  mkring.m  nodechk.m  ring.1.ele  ring.1.face  ring.1.node  ring.node  ringfield.m  tet.msh  vcheck.m  vfield.m
src/: Makefile  Makefile.am  Makefile.in  bsi-private.h  bsi.c  bsi.h  bsi.lo  duffy-tet.c  duffy-tet.lo  duffy.h  integrate.c  interpolate.c  interpolate.lo  libbsi.la  moltrumb.c  quadrature.c  quadrature.h  quadrature.lo  rbf.c  rbf.h  rbf.lo  sources.c  sources.lo  tetgen.lo  tetquad.c  tetquad.h  tetquad.lo  tetwrap.c++  tetwrap.h  tetwrap.lo
src/.deps/: bsi.Plo  duffy-tet.Plo  integrate.Plo  interp.Plo  interpolate.Plo  predicates.Plo  quadrature.Plo  rbf.Plo  sources.Plo  tetgen.Plo  tetquad.Plo  tetwrap.Plo
src/.libs/: libbsi-0.1.so.0  libbsi-0.1.so.0.0.0  libbsi.la  libbsi.lai
tools/: Makefile  Makefile.am  Makefile.in  bsi-eval  bsi-eval.c  bsi-init  bsi-init.c  bsi-tests  bsi-tests.c
tools/.deps/: bsi-eval.Po  bsi-init.Po  bsi-tests.Po
